tests/errors/syn5.kt
fun main(args: Array<String>) {
    var x =: Int 5
}